--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="hero-content text-center">
                     <!--<h1>Ram and Antara</h1>-->
                     <img src="img/logo-lg.png">
-                    <!--<p class="intro">Ram & Antara are getting hitched!</p>-->
+                    <!--<p class="intro">Ram & radha are getting hitched!</p>-->
                     <!--<a href="#" class="btn btn-fill btn-large btn-margin-right">Scroll Down</a> -->
                 </div>
             </div>
@@ -492,7 +492,7 @@
         <div class="row">
             <div class="col-sm-12 text-center content">
                 <span class="to-top-wrapper"><a href="#top" class="to-top"><i class="fa fa-angle-up"></i></a></span>
-                <p>Crafted by Ram with lots of <span class="fa fa-heart pulse2"></span> for Antara</p>
+                <p>Crafted by Ram with lots of <span class="fa fa-heart pulse2"></span> for radha </p>
             </div>
         </div>
     </div>
